RESOLVED FIXED181745
Fix behavior of ellipse with single <shape-radius>
https://bugs.webkit.org/show_bug.cgi?id=181745
Summary Fix behavior of ellipse with single <shape-radius>
Simon Fraser (smfr)
Reported 2018-01-17 09:16:19 PST
Need to fix the behavior to match the spec. See https://github.com/w3c/csswg-drafts/issues/2175
Attachments
Patch (76.06 KB, patch)
2019-10-02 23:54 PDT, Joonghun Park
no flags
Patch (123.26 KB, patch)
2019-10-03 05:00 PDT, Joonghun Park
no flags
Eric Willigers
Comment 1 2019-05-03 14:53:11 PDT
Joonghun Park
Comment 2 2019-10-02 23:54:07 PDT
Joonghun Park
Comment 3 2019-10-03 05:00:23 PDT
Joonghun Park
Comment 4 2019-10-03 06:05:17 PDT
Could you please review this patch?
Antti Koivisto
Comment 5 2019-10-03 06:09:17 PDT
Comment on attachment 380100 [details] Patch r=me
Joonghun Park
Comment 6 2019-10-03 06:17:00 PDT
(In reply to Antti Koivisto from comment #5) > Comment on attachment 380100 [details] > Patch > > r=me Thank you for your review, Antti:)
WebKit Commit Bot
Comment 7 2019-10-03 07:03:06 PDT
Comment on attachment 380100 [details] Patch Clearing flags on attachment: 380100 Committed r250653: <https://trac.webkit.org/changeset/250653>
WebKit Commit Bot
Comment 8 2019-10-03 07:03:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2019-10-03 07:04:18 PDT
Note You need to log in before you can comment on or make changes to this bug.