CSS ellipse() doesn't accept single <shape-radius> https://bugs.webkit.org/show_bug.cgi?id=181745

CSS ellipse() should only accept 0 or 2 radii.
The corresponding csswg discussion is
https://github.com/w3c/csswg-drafts/issues/2175.
LayoutTests/imported/w3c:

Patch by Joonghun Park <pjh0718@gmail.com> on 2019-10-03
Reviewed by Antti Koivisto.

* web-platform-tests/css/css-masking/parsing/clip-path-computed-expected.txt: Added.
* web-platform-tests/css/css-masking/parsing/clip-path-computed.html: Added.
* web-platform-tests/css/css-masking/parsing/clip-path-invalid-expected.txt: Added.
* web-platform-tests/css/css-masking/parsing/clip-path-invalid.html: Added.
* web-platform-tests/css/css-masking/parsing/clip-path-valid-expected.txt: Added.
* web-platform-tests/css/css-masking/parsing/clip-path-valid.html: Added.
* web-platform-tests/css/css-masking/parsing/shape-outside-computed-expected.txt: Added.
* web-platform-tests/css/css-masking/parsing/shape-outside-computed.html: Added.
* web-platform-tests/css/css-masking/parsing/shape-outside-invalid-expected.txt: Copied from LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/parsing/shape-outside-invalid-expected.txt.
* web-platform-tests/css/css-masking/parsing/shape-outside-invalid.html: Added.
* web-platform-tests/css/css-masking/parsing/shape-outside-valid-expected.txt: Added.
* web-platform-tests/css/css-masking/parsing/shape-outside-valid.html: Added.
* web-platform-tests/css/css-shapes/parsing/shape-outside-invalid-expected.txt:
* web-platform-tests/css/css-shapes/shape-outside/values/shape-outside-ellipse-001-expected.txt:
* web-platform-tests/css/css-shapes/shape-outside/values/shape-outside-ellipse-005-expected.txt:
* web-platform-tests/css/css-shapes/shape-outside/values/shape-outside-ellipse-010-expected.txt:
* web-platform-tests/css/css-shapes/shape-outside/values/shape-outside-ellipse-010.html:
* web-platform-tests/css/css-shapes/shape-outside/values/shape-outside-ellipse-011-expected.txt:
* web-platform-tests/css/css-shapes/shape-outside/values/shape-outside-ellipse-011.html:
* web-platform-tests/css/css-shapes/shape-outside/values/support/parsing-utils.js:

Source/WebCore:

Patch by Joonghun Park <pjh0718@gmail.com> on 2019-10-03
Reviewed by Antti Koivisto.

Tests: imported/w3c/web-platform-tests/css/css-masking/parsing/clip-path-computed.html
       imported/w3c/web-platform-tests/css/css-masking/parsing/clip-path-invalid.html
       imported/w3c/web-platform-tests/css/css-masking/parsing/clip-path-valid.html
       imported/w3c/web-platform-tests/css/css-masking/parsing/shape-outside-computed.html
       imported/w3c/web-platform-tests/css/css-masking/parsing/shape-outside-invalid.html
       imported/w3c/web-platform-tests/css/css-masking/parsing/shape-outside-valid.html

* css/CSSBasicShapes.cpp:
(WebCore::CSSBasicShapeEllipse::cssText const):
* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeBasicShapeEllipse):

LayoutTests:

Remove the layout tests duplicated with the wpt ported version ones.

Patch by Joonghun Park <pjh0718@gmail.com> on 2019-10-03
Reviewed by Antti Koivisto.

* css3/shapes/shape-outside/supported-shapes/ellipse/shape-outside-ellipse-015-expected.html: Removed.
* css3/shapes/shape-outside/supported-shapes/ellipse/shape-outside-ellipse-015.html: Removed.
* css3/shapes/shape-outside/supported-shapes/ellipse/shape-outside-ellipse-017-expected.html: Removed.
* css3/shapes/shape-outside/supported-shapes/ellipse/shape-outside-ellipse-017.html: Removed.
* css3/shapes/shape-outside/values/shape-outside-ellipse-001-expected.txt: Removed.
* css3/shapes/shape-outside/values/shape-outside-ellipse-001.html: Removed.
* css3/shapes/shape-outside/values/shape-outside-ellipse-005-expected.txt: Removed.
* css3/shapes/shape-outside/values/shape-outside-ellipse-005.html: Removed.
* css3/shapes/shape-outside/values/shape-outside-ellipse-010-expected.txt: Removed.
* css3/shapes/shape-outside/values/shape-outside-ellipse-010.html: Removed.
* css3/shapes/shape-outside/values/shape-outside-ellipse-011-expected.txt: Removed.
* css3/shapes/shape-outside/values/shape-outside-ellipse-011.html: Removed.
* fast/shapes/parsing/parsing-shape-outside-expected.txt:
* fast/shapes/parsing/parsing-test-utils.js:
* platform/gtk/TestExpectations:
* platform/ios/TestExpectations:

Canonical link: https://commits.webkit.org/216013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250653 268f45cc-cd09-0410-ab3c-d52691b4dbfc